Added calculate class to input fields

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/upper-section-style.css">
     <link rel="stylesheet" href="css/lower-section-style.css">
     <link rel="stylesheet" href="css/game-style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>Yahtzee</title>
 </head>
 <body>
@@ -63,7 +64,7 @@
                     </th>
                     <th class="color">Count and add only aces</th>
                     <th>
-                    <input type="number" id="ones-input">
+                    <input class="calculate" type="number" id="ones-input">
                     </th>
                 </tr>
                 <tr>
@@ -72,7 +73,7 @@
                     </th>
                     <th class="color">Count and add only twos</th>
                     <th>
-                    <input type="number" id="twos-input">
+                    <input class="calculate" type="number" id="twos-input">
                     </th>
                 </tr>
                 <tr>
@@ -81,7 +82,7 @@
                     </th>
                     <th class="color">Count and add only threes</th>
                     <th>
-                    <input type="number" id="threes-input">
+                    <input class="calculate" type="number" id="threes-input">
                     </th>
                 </tr>
                 <tr>
@@ -90,7 +91,7 @@
                     </th>
                     <th class="color">Count and add only fours</th>
                     <th>
-                    <input type="number" id="fours-input">
+                    <input class="calculate" type="number" id="fours-input">
                     </th>
                 </tr>
                 <tr>
@@ -99,7 +100,7 @@
                     </th>
                     <th class="color">Count and add only fives</th>
                     <th>
-                    <input type="number" id="fives-input">
+                    <input class="calculate" type="number" id="fives-input">
                     </th>
                 </tr>
                 <tr>
@@ -108,7 +109,7 @@
                     </th>
                     <th class="color">Count and add only sixes</th>
                     <th>
-                    <input type="number" id="sixes-input">
+                    <input class="calculate" type="number" id="sixes-input">
                     </th>
                 </tr>
                 <tr>
@@ -143,49 +144,49 @@
                     <th>3 of a kind</th>
                     <th class="color">Add total of all dice</th>
                     <th>
-                        <input type="number" id="three-kind-input">
+                        <input class="calculate" type="number" id="three-kind-input">
                     </th>
                 </tr>
                 <tr>
                     <th>4 of a kind</th>
                     <th class="color">Add total of all dice</th>
                     <th>
-                        <input type="number" id="four-kind-input">
+                        <input class="calculate" type="number" id="four-kind-input">
                     </th>
                 </tr>
                 <tr>
                     <th>Full House</th>
                     <th class="color">Score 25</th>
                     <th>
-                        <input type="number" id="full-house-input">
+                        <input class="calculate" type="number" id="full-house-input">
                     </th>
                 </tr>
                 <tr>
                     <th>SM Straight</th>
                     <th class="color">Score 30</th>
                     <th>
-                        <input type="number" id="small-straight-input">
+                        <input class="calculate" type="number" id="small-straight-input">
                     </th>
                 </tr>
                 <tr>
                     <th>LG Straight</th>
                     <th class="color">Score 40</th>
                     <th>
-                        <input type="number" id="large-straight-input">
+                        <input class="calculate" type="number" id="large-straight-input">
                     </th>
                 </tr>
                 <tr>
                     <th>YAHTZEE</th>         
                     <th class="color">Score 50</th>
                     <th>
-                        <input type="number" id="yahtzee-input">
+                        <input class="calculate" type="number" id="yahtzee-input">
                     </th>
                 </tr>
                 <tr>
                     <th>Chance</th>
                     <th class="color">Score total of all dice</th>
                     <th>
-                        <input type="number" id="chance-input">
+                        <input class="calculate" type="number" id="chance-input">
                     </th>
                 </tr>
 
