refactored code to reset card

--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
                     <th class="upper-section-total">TOTAL</th>
                     <th class="upper-section-upperTotal">--------></th>
                     <th class="color">
-                    <input readonly type="number" id="upper-total-input">
+                    <input class="total" readonly type="number" id="upper-total-input">
                     </th>
                 </tr>
                 <tr>
                     <th>BONUS <font size="1"><br>(if total score is 63 or more)</font></th>
                     <th class="color">SCORE 35</th>
                     <th>
-                    <input readonly type="number" id="bonus-input">
+                    <input class="total" readonly type="number" id="bonus-input">
                     </th>
                 </tr>
                 <tr>
                     <th class="upper-section-upperTotal">TOTAL</th>
                     <th class="upper-section-upperTotal">--------></th>
                     <th class="color">
-                    <input readonly type="number" id="upper-grandtotal-input">
+                    <input class="total" readonly type="number" id="upper-grandtotal-input">
                     </th>
                 </tr>
 
@@ -205,7 +205,7 @@
                                 <i id="third-bonus" class="fa-solid fa-x hide"></i>
                             </div>
                         </div>
-                        <input readonly type="number" id="yahtzee-bonus-bottom-input">
+                        <input class="total" readonly type="number" id="yahtzee-bonus-bottom-input">
                     </th>
                 </tr> 
                 <tr></tr>
@@ -213,7 +213,7 @@
                     <th class="lower-total-bottom">Total (lower)</th>
                     <th class="color">----------></th>
                     <th class="color">
-                        <input readonly type="number" id="lower-total-bottom-input">
+                        <input class="total" readonly type="number" id="lower-total-bottom-input">
                     </th>
                 </tr>
                 
@@ -221,7 +221,7 @@
                     <th class="upper-total-bottom">Total (upper)</th>
                     <th class="color">----------></th>
                     <th>
-                        <input readonly type="number" id="upper-total-bottom-input">
+                        <input class="total" readonly type="number" id="upper-total-bottom-input">
                     </th>
                 </tr>
                     
@@ -229,7 +229,7 @@
                     <th class="grand-total-bottom">Grand Total</th>
                     <th class="color">----------></th>
                     <th class="color">
-                        <input readonly type="number" id="grand-total-bottom-input" >
+                        <input class="total" readonly type="number" id="grand-total-bottom-input" >
                     </th>
                 </tr>
                 </tbody>
